error class bug squashed... one tiny more to go

--- a/style.css
+++ b/style.css
@@ -188,5 +188,10 @@ h1 {
 
 .hide {
   opacity: 0;
-  visibility: hidden;
+  display: none;
+}
+
+p {
+  font-style: italic;
+  font-size: 18px;
 }
